--- a/site/overrides/partials/comments.html
+++ b/site/overrides/partials/comments.html
@@ -10,7 +10,7 @@
         data-reactions-enabled="0"
         data-emit-metadata="0"
         data-input-position="bottom"
-        data-theme="preferred_color_scheme"
+        data-theme="light"
         data-lang="en"
         crossorigin="anonymous"
         async>
